# brown-brownfield-cartographer

./: .dockerignore  .env.example  .gitignore  DEMO_SCRIPT.md  FINAL_REPORT.md  INTERIM_REPORT.md  README.md  RECONNAISSANCE.md  cartographer.sh  docker-compose.yml  pyproject.toml  pyrightconfig.json
.cartography/: CODEBASE.md  cartography_trace.jsonl  embeddings.npy  interactive_graph.html  lineage_graph.json  metadata.json  module_graph.json  onboarding_brief.md
.cartography/automaton-auditor/: CODEBASE.md  interactive_graph.html  onboarding_brief.md
.cartography/better-auth/: CODEBASE.md  interactive_graph.html  onboarding_brief.md
.cartography/brown-brownfield-cartographer/: CODEBASE.md  cartography_trace.jsonl  embeddings.npy  interactive_graph.html  last_run_commit.txt  lineage_graph.json  metadata.json  module_graph.json  onboarding_brief.md
.cartography/brownfield-cartographer/: CODEBASE.md  cartography_trace.jsonl  interactive_graph.html  lineage_graph.json  module_graph.json  onboarding_brief.md
.cartography/jaffle_shop/: .cartography_status.json  CODEBASE.md  cartography_trace.jsonl  embeddings.npy  interactive_graph.html  lineage_graph.json  metadata.json  module_graph.json  onboarding_brief.md
.cartography/jaffle_shop_duckdb/: CODEBASE.md  cartography_trace.jsonl  embeddings.npy  interactive_graph.html  last_run_commit.txt  lineage_graph.json  metadata.json  module_graph.json  onboarding_brief.md
.cartography/ol-data-platform/: CODEBASE.md  cartography_trace.jsonl  interactive_graph.html  (+3 more)
scripts/: verify_context_injection.py
src/: __init__.py  cli.py  orchestrator.py
tests/: e2e_lineage_verification.py  test_analyzer.py  test_bug_conditions.py  test_hydrologist_ml.py  test_preservation.py  test_resolver.py
(+36 files in other folders)
