[project]
name = "brownfield-cartographer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mistire Daniel", email = "mdwithgod@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.6",
    "langgraph>=1.1.0",
    "langchain-openai>=0.3.0",
    "networkx>=3.6.1",
    "numpy>=2.4.3",
    "openai>=2.26.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pyvis>=0.3.2",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "sqlglot>=29.0.1",
    "tenacity>=9.0.0",
    "tree-sitter==0.21.3",
    "tree-sitter-languages==1.10.2",
    "python-dotenv>=1.2.2",
]

[project.scripts]
cartographer = "src.cli:run_main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
